# veilguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
benchmarks/: compare.py  comparison.json  evaluate.py  generate_corpus.py  results.json
docs/: threat-model.md
paper/: Makefile  references.bib  veilguard.tex
src/veilguard/: __init__.py  __main__.py  cli.py  detect.py  initialize.py  patterns.py  scan.py  secret_store.py  status.py  transcript.py  verify.py  watch.py
src/veilguard/backends/: __init__.py  config.py  factory.py  local.py  types.py
src/veilguard/broker/: __init__.py
src/veilguard/mcp/: __init__.py
src/veilguard/phantom/: __init__.py
src/veilguard/scope/: __init__.py
src/veilguard/session/: __init__.py
tests/: test_cli.py  test_config.py  test_detect.py  test_init.py  test_local_backend.py  test_patterns.py  test_scan.py  test_secret_store.py  test_status.py  test_transcript.py  test_verify.py  test_watch.py
